--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v2
+        uses: astral-sh/setup-uv@v4  # Updated from v2 to v4
         with:
           version: "latest"
 
@@ -35,7 +35,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install uv
-        uses: astral-sh/setup-uv@v2
+        uses: astral-sh/setup-uv@v4  # Updated from v2 to v4
         with:
           version: "latest"
 
@@ -43,10 +43,7 @@ jobs:
         run: uv python install 3.13
 
       - name: Install production dependencies only
-        run: |
-          uv sync --no-dev
-          uv run python -m pip install pytest
-
+        run: uv sync --no-dev  # Removed unnecessary pytest install
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
