--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,9 @@ dependencies = [
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
-    "httpx>=0.24.0",  # For testing FastAPI
-    "ruff>=0.1.0",    # Replaces black, isort, flake8
-    "pre-commit>=3.0.0",  # Add pre-commit
+    "httpx>=0.24.0",
+    "ruff>=0.1.0",
+    "pre-commit>=3.0.0",
 ]
 
 [build-system]
@@ -36,7 +36,7 @@ packages = ["src"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 
-# Ruff configuration - Fixed syntax
+# Ruff configuration
 [tool.ruff]
 target-version = "py312"
 line-length = 88
