--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi>=0.104.0",
     "mangum>=0.17.0",
     "aws-lambda-powertools>=2.25.0",
+    "aws-xray-sdk>=2.14.0",
     "boto3>=1.26.0",
     "pydantic>=2.5.0",
     "google-auth>=2.17.0",
